=== SVN

* Fixed transform with array tuples in postgres adapter.

* Changed spec configuration to Database objects instead of URIs in order to support custom options for spec databases.

* Renamed schema files.

* Fixed Dataset#from to work correctly with SQL functions (#193).

=== 1.3 (2008-03-08)

* Added configuration file for running specs (#186).

* Changed Database#drop_index to accept fixed arity (#173).

* Changed column definition sql to put UNSIGNED constraint before unique in order to satisfy MySQL (#171).

* Enhanced MySQL adapter to support load data local infile_, added compress option for mysql connection by default (#172).

* Fixed bug when inserting hashes in array tuples mode.

* Changed SQLite adapter to catch RuntimeError raised when executing a statement and raise an Error::InvalidStatement with the offending SQL and error message (#188).

* Added Error::InvalidStatement class.

* Fixed Dataset#reverse to not raise for unordered dataset (#189).

* Added Dataset#unordered method and changed #order to remove order if nil is specified (#190).

* Fixed reversing order of ASC expression (#164).

* Added support for :null => true option when defining table columns (#192).

* Fixed Symbol#method_missing to accept variable arity (#185).

=== 1.2.1 (2008-02-29)

* Added add_constraint and drop_constraint functionality to Database#alter_table (#182).

* Enhanced Dataset#multi_insert to accept datasets (#179).

* Added MySQL::Database#use method for switching database (#180).

* Enhanced Database.uri_to_options to accept uri strings (#178).

* Added Dataset#columns! method that always makes a roundtrip to the DB (#177).

* Added new Dataset#each_page method that iterates over all pages in the result set (#175).

* Added Dataset#reverse alias to Dataset#reverse_order (#174).

* Fixed Dataset#transform_load and #transform_save to create a trasnformed copy of the supplied hash instead of transforming it in place (#184).
